k8n/destinationrule-customer.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: customer-destination
spec:
  host: customer-service
  trafficPolicy:
    tls:
      mode: DISABLE
