k8n/destinationrule-login.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: login-destination
spec:
  host: login-service
  trafficPolicy:
    tls:
      mode: DISABLE
