k8n/virtualservice-customer.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customer-service
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: /api/customers
        - uri:
            prefix: /customers
      rewrite:
        uri: /api/customers
      route:
        - destination:
            host: customer-service
            port:
              number: 8081
