k8n/virtualservice-login.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: login-service
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: /api/login
        - uri:
            prefix: /login
      rewrite:
        uri: /api/login
      route:
        - destination:
            host: login-service
            port:
              number: 8082
