k8n/virtualservice-order.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
  namespace: default
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /orders
        - uri:
            prefix: /api/orders
      route:
        - destination:
            host: order-service
            port:
              number: 8080
